# AgentMem

./: .commit_status  .dockerignore  .env.example  .gitignore  .mcp.json  .zhipu_test_config  ADAPTIVE_SEARCH_COMPLETE.md  AGENTMEM42_EXECUTIVE_SUMMARY.md  AGENTMEM71_RESEARCH_SUMMARY.md  AGENTMEM_2.1 ROADMAP.md  AGENTMEM_2.5_P0_SUMMARY.md  AGENTMEM_2.5_P1_FINAL_REPORT.md  AGENTMEM_2.5_P1_SUMMARY.md  AGENTMEM_2.6_COMPILATION_FIX_REPORT.md  AGENTMEM_2.6_COMPLETE.md  AGENTMEM_2.6_FINAL_SUMMARY.md  AGENTMEM_2.6_P0_STATUS.md  AGENTMEM_2.6_PROGRESS_REPORT.md  AGENTMEM_COMPREHENSIVE_ANALYSIS_2025.md  AGENTMEM_FINAL_VALIDATION_SUMMARY_CN.md  AGENTMEM_PROMOTIONAL_ARTICLE.md  AGENTMEM_SOCIAL_POST.md  AGENTMEM_USER_GUIDE.md  AGENTMEM_VERIFICATION_REPORT.md  AGENTMEM_会话完成总结_2025-01-05.md  AGENTMEM_最终总结_2025-01-05.md  AGENTMEM文档批量删除完成报告_2025-01-05.md  AGENTMEM文档清理完成_2025-01-05.md  AGENTX4_PLAN_EVALUATION.md  AGENT_ID_FIX_COMPLETE.md  AGENT_ID_OPTIONAL_COMPREHENSIVE_FIX.md  AGENT_ID_OPTIONAL_FIX.md  AGENT_ID_OPTIONAL_SUCCESS_REPORT.md  AI_CHAT_PERFORMANCE_OPTIMIZATION_MASTER_PLAN.md  AI_Chat_性能优化分析.md  ALL_FEATURES_COMPLETE_20251024.md  ALL_OPTIMIZATIONS_COMPLETE.md  ALL_TESTS_PASS_20251024.md  ANALYSIS_COMPLETE_INDEX.md  ANALYSIS_SUMMARY.md  (+736 more)
crates/agent-mem/: Cargo.toml
crates/agent-mem-deployment/: Cargo.toml
crates/agent-mem-deployment/src/: config_loader.rs  lib.rs
crates/agent-mem-deployment/templates/: config.dev.toml  config.embedded.toml  config.full.toml  config.minimal.toml  config.prod.toml  config.server.toml  config.test.toml
crates/agent-mem-deployment/tests/: config_embed_test.rs  config_loader_test.rs  embedded_test.rs  packaging_test.rs
crates/agent-mem-embeddings/: Cargo.toml
crates/agent-mem-embeddings/src/: cached_embedder.rs  factory.rs  lib.rs  utils.rs
crates/agent-mem-event-bus/: Cargo.toml
crates/agent-mem-event-bus/src/: bus.rs  handler.rs  lib.rs  stream.rs
crates/agent-mem-forgetting/: Cargo.toml
crates/agent-mem-forgetting/src/: curve.rs  lib.rs  protection.rs  scheduler.rs
crates/agent-mem-lumosai/: Cargo.toml
crates/agent-mem-lumosai/examples/: basic_integration.rs
crates/agent-mem-lumosai/src/: agent_factory.rs  async_storage.rs  cached_memory_adapter.rs  error.rs  hierarchical_memory_adapter.rs  hybrid_memory_adapter.rs  lib.rs  memory_adapter.rs  prompt_compressor.rs
crates/agent-mem-lumosai/tests/: integration_test.rs
crates/agent-mem-metacognition/: Cargo.toml
crates/agent-mem-metacognition/src/: consolidation.rs  history.rs  lib.rs  metacognition.rs  recommendations.rs
crates/agent-mem-plugin-sdk/: Cargo.toml  README.md
crates/agent-mem-plugin-sdk/src/: host.rs  lib.rs  macros.rs  plugin.rs  types.rs
crates/agent-mem-plugins/: Cargo.toml  README.md
crates/agent-mem-plugins/benches/: plugin_benchmark.rs
crates/agent-mem-plugins/src/: lib.rs  loader.rs  manager.rs  monitor.rs  registry.rs  types.rs
crates/agent-mem-plugins/tests/: e2e_wasm_plugin_test.rs  end_to_end_test.rs  integration_test.rs  llm_integration_test.rs  network_integration_test.rs  resource_limits_test.rs  search_algorithm_test.rs  wasm_loading_test.rs
crates/agent-mem-python/: Cargo.toml  FIXES.md  PYTHON_USAGE_GUIDE.md  build.rs
crates/agent-mem-python/src/: lib.rs
crates/agent-mem-server/: Cargo.toml  memory:
crates/agent-mem-server/benches/: database_performance.rs  performance_benchmark.rs  vector_performance.rs
crates/agent-mem-server/examples/: enterprise_complete_demo.rs
crates/agent-mem-server/src/: auth.rs  config.rs  error.rs  error_handler.rs  error_handler_tests.rs  lib.rs  main.rs  middleware.rs  models.rs  orchestrator_factory.rs  rbac.rs  server.rs  sse.rs  telemetry.rs  websocket.rs
crates/agent-mem-server/tests/: README.md  agent_state_api_test.rs  chat_api_test.rs  e2e_api_test.rs  e2e_workflow_test.rs  enterprise_features_verification_test.rs  integration_libsql.rs  integration_test_p1.rs  memory_unified_test.rs  metrics_integration_test.rs  rbac_integration_test.rs  reranker_integration_test.rs  route_compatibility_test.rs  server_integration_test.rs  streaming_chat_test.rs  streaming_test.rs  test_p1_validation.rs  tool_calling_integration_test.rs  vector_integration_test.rs
crates/agent-mem-tools/: Cargo.toml
crates/agent-mem-tools/benches/: tool_execution.rs
crates/agent-mem-tools/examples/: basic_usage.rs
crates/agent-mem-tools/src/: agent_tools.rs  agentmem_tools.rs  config.rs  execution_sandbox.rs  lib.rs  sandbox.rs
crates/agent-mem-tools/tests/: builtin_tools_test.rs  execution_sandbox_test.rs
crates/agent-mem-working-memory/: Cargo.toml
crates/agent-mem-working-memory/src/: config.rs  lib.rs  service.rs
crates/agent-mem/benches/: memory_benchmarks.rs  p1_optimization_benchmarks.rs
crates/agent-mem/examples/: plugin_deep_integration.rs  plugin_integration.rs
crates/agent-mem/src/: api_simplification.rs  auto_config.rs  builder.rs  chat.rs  history.rs  lib.rs  memory.rs  orchestrator.rs  plugin_integration.rs  types.rs  visualization.rs
crates/agent-mem/tests/: README.md  batch_operations_test.rs  builder_api_test.rs  builder_plugin_test.rs  comprehensive_integration_test.rs  concurrency_test.rs  default_behavior_test.rs  embedding_queue_test.rs  (+20 more)
examples/advanced-reasoning-demo/: Cargo.toml
examples/agent-from-env-demo/: Cargo.toml
examples/agent-lifecycle-demo/: Cargo.toml  README.md
examples/batch-embedding-optimization-demo/: Cargo.toml
examples/chat-demo/: Cargo.toml
examples/comprehensive-verification/: Cargo.toml
examples/database-schema-demo/: Cargo.toml  README.md
examples/demo-codebase-memory/: Cargo.toml  README.md
examples/demo-intelligent-chat/: Cargo.toml
examples/demo-memory-viewer/: Cargo.toml  README.md
examples/demo-multimodal/: Cargo.toml
examples/demo-performance-comparison/: Cargo.toml  README.md
examples/demo-performance-simple/: Cargo.toml
examples/embedded-mode-demo/: Cargo.toml  README.md
examples/embedded-persistent-demo/: Cargo.toml  README.md  cleanup.sh
examples/enhanced-hybrid-search-demo/: Cargo.toml  README.md  run_demo.sh
(+1939 files in other folders)
