[package]
name = "agent-mem-deployment"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-config = { path = "../agent-mem-config" }
agent-mem-storage = { path = "../agent-mem-storage", features = ["lancedb"] }

# 嵌入式数据库
libsql = { version = "0.3", optional = true }

# 配置嵌入
include_dir = "0.7"
rust-embed = "8.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 日志
tracing = "0.1"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 文件系统
tempfile = "3.8"

# 时间
chrono = "0.4"

[features]
default = ["embedded-db", "embedded-vector"]
embedded-db = ["dep:libsql"]
embedded-vector = ["agent-mem-storage/lancedb"]
full = ["embedded-db", "embedded-vector"]

