[package]
name = "agent-mem-event-bus"
version = "0.1.0"
edition = "2021"
description = "Event bus for AgentMem - pub/sub event system"
license = "MIT OR Apache-2.0"

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-performance = { path = "../agent-mem-performance" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
