[package]
name = "agent-mem-forgetting"
version = "0.1.0"
edition = "2021"
description = "Forgetting mechanism for AgentMem - Ebbinghaus forgetting curve and auto cleanup"
license = "MIT OR Apache-2.0"

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-core = { path = "../agent-mem-core" }
agent-mem-event-bus = { path = "../agent-mem-event-bus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
