[package]
name = "agent-mem-metacognition"
version = "2.0.0"
edition = "2021"
authors = ["AgentMem Team <team@agentmem.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/louloulin/agentmem"
homepage = "https://www.agentmem.cc"
documentation = "https://docs.rs/agent-mem-metacognition"
description = "Metacognition and auto-consolidation for AgentMem"
keywords = ["ai", "memory", "metacognition", "consolidation", "agent"]

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-core = { path = "../agent-mem-core" }
agent-mem-event-bus = { path = "../agent-mem-event-bus" }
agent-mem-intelligence = { path = "../agent-mem-intelligence" }

tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
