[package]
name = "agent-mem-plugin-sdk"
version = "0.1.0"
edition = "2021"
authors = ["AgentMem Team"]
description = "Plugin SDK for AgentMem - WebAssembly plugin development kit"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extism-pdk = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]

