[package]
name = "agent-mem-python"
version = "2.0.0"
edition = "2021"
authors = ["AgentMem Team"]
description = "Python bindings for AgentMem using PyO3"
license = "MIT OR Apache-2.0"

[lib]
name = "agentmem_native"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# AgentMem core dependencies
agent-mem-core = { path = "../agent-mem-core" }
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-config = { path = "../agent-mem-config" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
pyo3-asyncio = { version = "0.21", features = ["tokio-runtime"] }  # 升级到 0.21

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# For Arc wrapper
parking_lot = "0.12"

[build-dependencies]
pyo3-build-config = "0.20"

