[package]
name = "agent-mem-server"
version = "0.1.0"
edition = "2021"
description = "REST API server for AgentMem - Enterprise-grade memory management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentmem/agentmem"
keywords = ["memory", "ai", "llm", "server", "api"]
categories = ["web-programming::http-server", "api-bindings"]

[dependencies]
# Core AgentMem dependencies
agent-mem = { path = "../agent-mem" }  # ✅ 使用统一的Memory API
agent-mem-core = { path = "../agent-mem-core" }
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-config = { path = "../agent-mem-config" }
agent-mem-utils = { path = "../agent-mem-utils" }
agent-mem-tools = { path = "../agent-mem-tools" }
agent-mem-llm = { path = "../agent-mem-llm" }
agent-mem-observability = { path = "../agent-mem-observability" }
agent-mem-storage = { path = "../agent-mem-storage", optional = true }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit", "timeout"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"  # Phase 10 MVP P0-1: 配置文件加载

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Authentication and security
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Metrics and monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# OpenAPI documentation
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Lazy static initialization
once_cell = "1.19"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
argon2 = "0.5.3"
sha2.workspace = true

[features]
default = ["libsql"]
postgres = ["agent-mem-core/postgres"]
libsql = ["agent-mem-core/libsql"]
lancedb = ["agent-mem-storage/lancedb"]

[dev-dependencies]
tokio-test = "0.4"
tower-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
tempfile = "3.8"

[[bench]]
name = "database_performance"
harness = false

[[bench]]
name = "performance_benchmark"
harness = false

[[bench]]
name = "vector_performance"
harness = false
