[package]
name = "agent-mem-working-memory"
version = "0.1.0"
edition = "2021"
description = "Working Memory Service for AgentMem - fast temporary context storage"
license = "MIT OR Apache-2.0"

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-performance = { path = "../agent-mem-performance" }
agent-mem-event-bus = { path = "../agent-mem-event-bus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
