[package]
name = "agent-mem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AgentMem 统一记忆管理 API - 极简易用的 AI Agent 记忆系统"

[dependencies]
# 核心依赖
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-core = { path = "../agent-mem-core" }
agent-mem-llm = { path = "../agent-mem-llm" }
agent-mem-storage = { path = "../agent-mem-storage" }
agent-mem-embeddings = { path = "../agent-mem-embeddings" }
agent-mem-intelligence = { path = "../agent-mem-intelligence" }
agent-mem-config = { path = "../agent-mem-config" }
agent-mem-utils = { path = "../agent-mem-utils" }
agent-mem-plugins = { path = "../agent-mem-plugins", optional = true }

# 异步运行时
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
tracing.workspace = true

# 其他
uuid.workspace = true
chrono.workspace = true

# 数据库（用于历史记录）
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tracing-subscriber.workspace = true
tempfile.workspace = true

[[bench]]
name = "memory_benchmarks"
harness = false

[features]
default = ["libsql", "fastembed"]
libsql = ["agent-mem-storage/libsql", "agent-mem-core/libsql"]
postgres = ["agent-mem-storage/postgres", "agent-mem-core/postgres"]
fastembed = ["agent-mem-embeddings/fastembed"]
all-providers = ["agent-mem-llm/all-providers", "agent-mem-embeddings/all-providers"]
plugins = ["agent-mem-plugins"]

