[package]
name = "advanced-reasoning-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-intelligence = { path = "../../crates/agent-mem-intelligence" }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

