[package]
name = "agent-from-env-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-core = { path = "../../crates/agent-mem-core" }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
agent-mem-storage = { path = "../../crates/agent-mem-storage" }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

