[package]
name = "batch-embedding-optimization-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-core = { path = "../../crates/agent-mem-core" }
agent-mem-storage = { path = "../../crates/agent-mem-storage", features = ["lancedb"] }
agent-mem-embeddings = { path = "../../crates/agent-mem-embeddings" }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.20"

