[package]
name = "demo-codebase-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem = { path = "../../crates/agent-mem", features = ["fastembed"] }
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
colored = "2.1"
walkdir = "2.5"
ignore = "0.4"

[[bin]]
name = "demo-codebase-memory"
path = "src/main.rs"

