[package]
name = "demo-intelligent-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem = { path = "../../crates/agent-mem", features = ["fastembed"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

