[package]
name = "demo-memory-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem = { path = "../../crates/agent-mem", features = ["fastembed"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
chrono = "0.4"
colored = "2.0"
tabled = "0.15"  # 表格显示
clap = { version = "4.4", features = ["derive"] }  # CLI参数解析

