[package]
name = "demo-multimodal"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-intelligence = { path = "../../crates/agent-mem-intelligence", features = ["multimodal"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
serde_json = "1.0"
chrono = "0.4"

