[package]
name = "demo-performance-comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem = { path = "../../crates/agent-mem", features = ["fastembed"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

