[package]
name = "embedded-mode-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-core = { path = "../../crates/agent-mem-core", features = ["libsql"] }
agent-mem-config = { path = "../../crates/agent-mem-config" }
agent-mem-storage = { path = "../../crates/agent-mem-storage", features = ["libsql", "lancedb"] }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
env_logger = "0.11"
log = "0.4"

[[bin]]
name = "basic-usage"
path = "src/basic_usage.rs"

[[bin]]
name = "vector-search"
path = "src/vector_search.rs"

[[bin]]
name = "full-workflow"
path = "src/full_workflow.rs"

