[package]
name = "embedded-persistent-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-core = { path = "../../crates/agent-mem-core", features = ["libsql"] }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
agent-mem-storage = { path = "../../crates/agent-mem-storage", features = ["libsql", "lancedb"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde_json = "1.0"

[[example]]
name = "verify_persistence"
path = "examples/verify_persistence.rs"

[[example]]
name = "full_feature_test"
path = "examples/full_feature_test.rs"

