[package]
name = "enhanced-hybrid-search-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-mem-core = { path = "../../crates/agent-mem-core" }
agent-mem-storage = { path = "../../crates/agent-mem-storage", features = ["libsql", "lancedb"] }
agent-mem-traits = { path = "../../crates/agent-mem-traits" }
agent-mem-embeddings = { path = "../../crates/agent-mem-embeddings" }

tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

